Bug 467652 - Escape key doesn't quit the application when Output pane is focused
Summary: Escape key doesn't quit the application when Output pane is focused
Status: RESOLVED FIXED
Alias: None
Product: kdiff3
Classification: Applications
Component: application (other bugs)
Version First Reported In: 1.10.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: michael
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-21 14:15 UTC by Taylor Buchanan
Modified: 2023-03-26 19:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 10.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Taylor Buchanan 2023-03-21 14:15:48 UTC
SUMMARY

The Escape key does not quit the application when "Quit also via Escape key" is enabled and the "Output" pane is focused.

STEPS TO REPRODUCE

1. Open KDiff3
2. Click "Cancel" on the file selection dialog
3. Enable "Quit also via Escape key" under "Integration Settings"
4. Select "Merge Current FIle"
5. Press the Escape key

OBSERVED RESULT

Nothing happens.

EXPECTED RESULT

If unsaved, prompt to save the file and then quit the application. If saved, quit the application.

SOFTWARE/OS VERSIONS
Windows: 11 Pro 22H2
Comment 1 Taylor Buchanan 2023-03-21 14:32:59 UTC
I originally reported this for 1.9.6 since that is what is available on winget. Though, I've confirmed the issue is also reproducible on 1.10.0 after I installed it manually. The difference with 1.10.0 is that the issue is only reproducible when you are merging actual files rather than clicking "Cancel" in step 2.
Comment 2 michael 2023-03-26 19:32:22 UTC
Git commit dc811b1091b6cc0fb021d099f0d90f0855e60ea2 by Michael Reeves.
Committed on 26/03/2023 at 19:18.
Pushed by mreeves into branch '1.10'.

Use  QShortcut for escape key quit

This will prevent the escape key from being sent as a keyPress event and possibly intercepted.́́
FIXED-IN:10.0.1
(cherry picked from commit 28c44e9440d9cdd256881abf2839aa6883ba2b77)

M  +4    -0    src/kdiff3.cpp
M  +2    -0    src/kdiff3.h
M  +1    -6    src/pdiff.cpp

https://invent.kde.org/sdk/kdiff3/commit/dc811b1091b6cc0fb021d099f0d90f0855e60ea2
Comment 3 michael 2023-03-26 19:32:54 UTC
Git commit 28c44e9440d9cdd256881abf2839aa6883ba2b77 by Michael Reeves.
Committed on 26/03/2023 at 19:17.
Pushed by mreeves into branch 'master'.

Use  QShortcut for escape key quit

This will prevent the escape key from being sent as a keyPress event and possibly intercepted.́́
FIXED-IN:10.0.1

M  +4    -0    src/kdiff3.cpp
M  +2    -0    src/kdiff3.h
M  +1    -6    src/pdiff.cpp

https://invent.kde.org/sdk/kdiff3/commit/28c44e9440d9cdd256881abf2839aa6883ba2b77