Use  QShortcut for escape key quit

This will prevent the escape key from being sent as a keyPress event and possibly intercepted.́́

BUG:467652
FIXED-IN:10.0.1
(cherry picked from commit 28c44e9440d9cdd256881abf2839aa6883ba2b77)